openturns/1.17/_sources/auto_reliability_sensitivity/design_of_experiments/plot_plot_design.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_reliability_sensitivity/design_of_experiments/plot_plot_design.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_plot_design.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_plot_design.py:


The PlotDesign method
=====================

.. GENERATED FROM PYTHON SOURCE LINES 21-22

The goal of this example is to present the features of the PlotDesign static method. 

.. GENERATED FROM PYTHON SOURCE LINES 25-27

Distribution
------------

.. GENERATED FROM PYTHON SOURCE LINES 29-36

.. code-block:: default

    import openturns as ot
    import openturns.viewer as otv
    import pylab as pl
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 37-39

In two dimensions
-----------------

.. GENERATED FROM PYTHON SOURCE LINES 41-45

.. code-block:: default

    dim = 2
    X = [ot.Uniform()] * dim
    distribution = ot.ComposedDistribution(X)








.. GENERATED FROM PYTHON SOURCE LINES 46-49

.. code-block:: default

    sampleSize = 10
    sample = distribution.getSample(sampleSize)








.. GENERATED FROM PYTHON SOURCE LINES 50-51

With default parameters the bounds are computed from the sample. 

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: default

    fig = otv.PlotDesign(sample);




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_001.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 56-57

Set the bounds.

.. GENERATED FROM PYTHON SOURCE LINES 59-61

.. code-block:: default

    bounds = distribution.getRange()








.. GENERATED FROM PYTHON SOURCE LINES 62-64

.. code-block:: default

    fig = otv.PlotDesign(sample, bounds);




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_002.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 65-66

Configure the size of the plot. 

.. GENERATED FROM PYTHON SOURCE LINES 68-71

.. code-block:: default

    fig = otv.PlotDesign(sample)
    fig.set_size_inches(10, 10)




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_003.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 72-73

Configure the number of subdivisions in each direction. 

.. GENERATED FROM PYTHON SOURCE LINES 75-77

.. code-block:: default

    fig = otv.PlotDesign(sample, subdivisions = [10, 5]);




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_004.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 78-79

Disable the ticks. 

.. GENERATED FROM PYTHON SOURCE LINES 81-83

.. code-block:: default

    fig = otv.PlotDesign(sample, enableTicks = False);




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_005.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 84-85

Configure the marker. 

.. GENERATED FROM PYTHON SOURCE LINES 87-90

.. code-block:: default

    fig = otv.PlotDesign(sample, plot_kw = 
                   {"marker":'.', "color": "red"});




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_006.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 91-92

Create the figure beforehand.

.. GENERATED FROM PYTHON SOURCE LINES 94-99

.. code-block:: default

    import matplotlib.pyplot as plt
    fig = plt.figure()
    fig.suptitle("My suptitle")
    fig = otv.PlotDesign(sample, figure = fig);




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_007.png
    :alt: My suptitle
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 100-102

In three dimensions
-------------------

.. GENERATED FROM PYTHON SOURCE LINES 104-108

.. code-block:: default

    dim = 3
    X = [ot.Uniform()] * dim
    distribution = ot.ComposedDistribution(X)








.. GENERATED FROM PYTHON SOURCE LINES 109-112

.. code-block:: default

    sampleSize = 10
    sample = distribution.getSample(sampleSize)








.. GENERATED FROM PYTHON SOURCE LINES 113-116

.. code-block:: default

    fig = otv.PlotDesign(sample);
    fig.set_size_inches(10, 10)




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_008.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 117-118

Configure the number of subdivisions. 

.. GENERATED FROM PYTHON SOURCE LINES 120-123

.. code-block:: default

    fig = otv.PlotDesign(sample, subdivisions = [12, 6, 3]);
    fig.set_size_inches(10, 10)




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_009.png
    :alt: plot plot design
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 124-125

Configure the bounds. 

.. GENERATED FROM PYTHON SOURCE LINES 127-131

.. code-block:: default

    bounds = distribution.getRange()
    fig = otv.PlotDesign(sample, bounds);
    fig.set_size_inches(10, 10)




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_plot_design_010.png
    :alt: plot plot design
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.213 seconds)


.. _sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_plot_design.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_plot_design.py <plot_plot_design.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_plot_design.ipynb <plot_plot_design.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
